# computational-math-tasks

./: .gitignore  README.md
task-1/: CMakeLists.txt  README.md  algo.cpp  algo.h  analysis.ipynb  funcs.cpp  funcs.h  grid.cpp  grid.h  main.cpp
task-1/csv/: Book.csv  Model1.csv
task-1/src/: algo.cpp  funcs.cpp  funcs.h  grid.cpp  grid.h  main.cpp
task-2/: README.md  splines.mw
task-3/: README.md  argparser.py  constants.py  convert_to_bmp.py  requirements.txt  svd_compressor.py
task-3/compressor/: Compressor.py
task-3/svd/: AbstractSVD.py  AdvancedSVD.py  NumpySVD.py  SimpleSVD.py
task-4/: README.md  fem.py  requirements.txt
